<resources>
    <string-array name="meter">
        <item>20 meter</item>
        <item>50 meter</item>
        <item>100 meter</item>
        <item>200 meter</item>
        <item>500 meter</item>
        <item>1000 meter</item>
        <item>2000 meter</item>
        <item>5000 meter</item>
    </string-array>
    <string name="auth_type">nic.hp.ccmgnrega.account.AuthenticatorService</string>
    <string name="content_authority">nic.hp.ccmgnrega.ContentProviderSync</string>
    <string name="app_name">Janmanrega</string>
    <string name="yes">Yes</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Janmanrega is available. Please update to version</string>
    <string name="youAreNotUpdatedMessage1">\ now</string>
    <string name="jobCardInputHint" translatable="false">Search by \'Job Card Number\'</string>
    <string name="finYearInfo">*This module provides attendance and payment data for the current and last financial year</string>
    <string name="numDaysText"><b>48 days</b></string>
    <string name="numDays2Text">(worked in FY 23-24)</string>
    <string name="jobCardId">XX-XX-XXX-XXX-XXX/XXXX</string>
    <string name="abpsNotEligible">For NPCI failed cases, the worker needs to go to bank and do 2 things:  Get his/her Aadhaar no. seeded with his/ her bank account Enable the bank account for DBT (Direct benefit Transfer)/ NPCI by filling and signing form at the bank</string>
    <string name="authNotSuccessful">For auth Failure cases, the GP/PO officer needs to go to \'Bulk Updation\' module and verify the record with correct Aadhaar no., Name as per Aadhaar and Gender of worker</string>
    <string name="AadhaarNotSeeded">For seeding failure cases, the GP/PO officer needs to enter correct Aadhaar no. and Name as per Aadhaar of worker under module in NREGASoft</string>
    <string name="ok">OK</string>
    <string name="search_assets">Search Assets</string>
    <string name="know_worker_att_pay">Know Worker\'s Attendance/Payments</string>
    <string name="nearby_assets">Nearby Assets</string>
    <string name="preferences">Change Language</string>
    <string name="about_mgnrega">About MGNREGA</string>
    <string name="ten_entitlements">Ten Entitlements</string>
    <string name="works">Works</string>
    <string name="search_panchayat">Search Panchayat</string>
    <string name="give_asset_feedback">Give Feedback</string>
    <string name="send_asset_feedback">Send Feedback</string>
    <string name="home">Home</string>
    <string name="select">Select</string>
    <string name="select_language">Please select language.</string>
    <string name="permissible_work_list">Permissible Works</string>
    <string name="seven_registers">Seven Registers</string>
    <string name="about_janmanrega">About Janmanrega</string>
    <string name="video_tutorials">Video Tutorials</string>
    <string name="workers_query">Raise Your Concern</string>
    <string name="state">State</string>
    <string name="worker_name">Worker Name</string>
    <string name="complaint_category">Complaint Category</string>
    <string name="complaint_sub_category">Complaint Sub-Category</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="job_card_number">Job Card Number</string>
    <string name="submit">Submit</string>
    <string name="get_otp">GET OTP</string>
    <string name="asset_feedback">Asset Feedback</string>
    <string name="please_select_asset">Please select asset</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="please_wait">Please Wait....</string>
    <string name="please_select_state">Please select State.</string>
    <string name="please_fill_job_card_number">Please enter Job card Number.</string>
    <string name="please_select_worker_name">Please Select Worker Name.</string>
    <string name="please_select_category">Please select Complaint Category.</string>
    <string name="please_select_subcategory">Please select Complaint Sub-Category.</string>
    <string name="please_fill_complaint_desc">Please enter Complaint Description.</string>
    <string name="please_fill_name">Please enter Name.</string>
    <string name="please_fill_mobile">Please enter Mobile Number.</string>
    <string name="please_fill_otp">Please enter OTP.</string>
    <string name="please_fill_valid_mobile">Please enter valid Mobile Number.</string>
    <string name="no_asset_msg">Please note : No asset found within 20 mtr of your current geographical location.</string>
    <string name="asset_exist_msg">Please note : Assets listed are within 20 mtr of your current geographical location.</string>
    <string name="search_by_job_card">Search by Job Card Number</string>
    <string name="your_name">Your Name</string>
    <string name="mobile_number">Your Mobile Number</string>
    <string name="otp">One Time Password</string>
    <string name="video_content1">Watch following videos to learn how to use Know Worker\'s  Attendance/Payment.</string>
    <string name="in_english">"In English:  "</string>
    <string name="in_hindi">"In Hindi:  "</string>
    <string name="total_job_card_searched">"Total Job Card Searched: "</string>
    <string name="video_content2">Share this application with your contacts using this </string>
    <string name="link">link</string>
    <string name="cant_say">Can\'t say</string>
    <string name="submit_confirmation">Do you really want to submit the data?</string>
    <string name="submission_alert">Submit-Alert</string>
    <string name="skip">Skip</string>
    <string name="submit_warning">Submit-Warning</string>
    <string name="warning">Warning</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude:  "</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="submit_info">"Submit Info: "</string>
    <string name="resend">Resend</string>
    <string name="data_not_found">Data not available.</string>
    <string name="category_of_asset">Category of Asset</string>
    <string name="type_of_work">Type of Work</string>
    <string name="financial_year">Financial Year</string>
    <string name="asset_work">Asset/Work</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="panchayat">Panchayat</string>
    <string name="all">All</string>
    <string name="gps_reading">Please Wait...Reading Your Location...</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="background_para_1"><![CDATA[To address twin objectives of ‘Planning’ & ‘Accountability’ in tracking the Mahatma Gandhi National Rural Employment Guarantee Scheme (MGNREGS)-sponsored works & created ‘Assets’, the Ministry of Rural Development (MoRD), Government of India, has designed & implemented a technical solution “GeoMGNREGA”.]]></string>
    <string name="background_para_2"><![CDATA[It is a path breaking initiative that uses space technology for ‘Geotagging’ all assets created under MGNREGS for improved planning, effective monitoring, enhanced visibility & greater transparency. GeoMGNREGA was launched on 30th of September 2016 in public domain, with a vision to make assets under MGNREGS transparent. It is a combination of Remote Sensing (RS) & Geographical Information System (GIS)-based technologies that serve as an effective tool to collect, store & analyze the various assets under MGNREGS, such as Farm Ponds, Percolation Tanks, Check Dams, Irrigation Channels, Rural Roads etc.]]></string>
    <string name="about_mgnrega_content"><![CDATA[The Mahatma Gandhi National Rural Employment Guarantee Act (MGNREGA, 2005) has been a landmark legislation providing a rights-based framework for enhancement of livelihood security & economic upliftment of the country. The Act was notified on 7th of September, 2005 to provide 100 days of guaranteed wage employment in a financial year to every rural household whose adult members volunteer to do unskilled manual work. Every year 30 Lakh works are being created under MGNREGA. These assets are being created, recorded & maintained by all Gram Panchayats (GPs).]]></string>
    <string name="switch_on_gps">Switch On GPS</string>
    <string name="enable_gps">The app needs your present location. Please Enable GPS.</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="view_asset">View Asset</string>
    <string name="no">No</string>
    <string name="asset_name">Asset Name</string>
    <string name="asset_code">Asset Code</string>
    <string name="work_name">Work Name</string>
    <string name="work_code">Work Code</string>
    <string name="gps_not_found">GPS Not Found</string>
    <string name="r_u_s_see_asset">Are you able to see a MGNREGA Asset?</string>
    <string name="about_mgnrega_content_2024">The Mahatma Gandhi National Rural Employment Guarantee Act (Mahatma Gandhi NREGA) is one of the flagship programmes of the Ministry of Rural Development (MoRD), Government of India that directly impacts the lives of the poor and promotes inclusive growth in rural India. The Act aims at enhancing the livelihood security of the rural poor by guaranteeing 100 days of wage employment in a financial year to every household whose adult members volunteer to do unskilled manual work. Implemented by the MoRD in 2005, currently, Mahatma Gandhi NREGA spans across all rural districts i.e. 740 under its coverage.</string>
    <string name="objective_of_scheme">Objectives of the Scheme</string>
    <string name="objective_1">(i) Providing at least 100 days of unskilled manual work in a financial year to every household in rural areas as per demand resulting in creation of productive assets of prescribed quality and durability.</string>
    <string name="objective_2">(ii) Strengthening the livelihood resource base of the poor.</string>
    <string name="objective_3">(iii) Proactively ensuring social inclusion and</string>
    <string name="objective_4">(iv) Strengthening Panchayati Raj Institutions (PRIs)</string>
    <string name="key_stakeholders">Key Stakeholders</string>
    <string name="key_stakeholder_header">The effective implementation of the Mahatma Gandhi NREGA involves a complex network of stakeholders at various levels, each contributing to its success. The key stakeholders include:</string>
    <string name="key_stakeholder_1">• Beneficiaries</string>
    <string name="key_stakeholder_2">• Gram Sabha (GS)</string>
    <string name="key_stakeholder_3">• Gram RojgarSevek (GRS)</string>
    <string name="key_stakeholder_4">• Three-tier Panchayati Raj Institutions (PRIs), especially the Gram Panchayat (GP)</string>
    <string name="key_stakeholder_5">• Programme Officer at the Block level</string>
    <string name="key_stakeholder_6">• District Programme Coordinator (DPC)</string>
    <string name="key_stakeholder_7">• State Government</string>
    <string name="key_stakeholder_8">• Ministry of Rural Development (MoRD)</string>
    <string name="key_stakeholder_9">• Civil Society</string>
    <string name="key_stakeholder_10">• Other stakeholdersviz. line departments, convergence departments, Self-Help Groups (SHGs) etc.</string>
    <string name="key_stakeholder_11">• Financial institutions (Banks and financial institutions may be involved in disbursing wages to Mahatma Gandhi NREGA workers through their accounts, ensuring timely payments and financial inclusion.)</string>
    <string name="view_complaint_status">View Complaint Status</string>
    <string name="otp_head">An OTP has been sent to your entered mobile number.Please enter the OTP to proceed.</string>
    <string name="ekyc_exemption">NMMS EXEMPTION</string>
</resources>