<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvOtpHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/otp_head"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOtpHead"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.goodiebag.pinview.Pinview
        android:id="@+id/pinview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMobile"
        app:cursorVisible="false"
        app:forceKeyboard="true"
        app:hint="0"
        app:inputType="number"
        app:password="true"
        app:pinBackground="@drawable/example_drawable"
        app:pinHeight="30dp"
        app:pinLength="6"
        app:pinWidth="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_below="@+id/pinview"
        android:background="?android:attr/detailsElementBackground"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/textView"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSubmit"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:background="@color/red"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pinview"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/green_color"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>